// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM Transaction Overview when data is loaded and fetching transaction charts with uiFilters when not defined environments selected should return the correct anomaly boundaries 1`] = `
Array [
  Object {
    "x": 1607436000000,
    "y": 0,
    "y0": 0,
  },
  Object {
    "x": 1607436900000,
    "y": 0,
    "y0": 0,
  },
  Object {
    "x": 1607437650000,
    "y": 0,
    "y0": 0,
  },
]
`;

exports[`APM Transaction Overview when data is loaded and fetching transaction charts with uiFilters with environment selected and empty kuery filter should return a non-empty anomaly series 1`] = `
Array [
  Object {
    "x": 1607436000000,
    "y": 1625128.56211579,
    "y0": 7533.02707532227,
  },
  Object {
    "x": 1607436900000,
    "y": 1660982.24115757,
    "y0": 5732.00699123528,
  },
  Object {
    "x": 1607437650000,
    "y": 1660982.24115757,
    "y0": 5732.00699123528,
  },
]
`;

exports[`APM Transaction Overview when data is loaded and fetching transaction charts with uiFilters with environment selected in uiFilters should return a non-empty anomaly series 1`] = `
Array [
  Object {
    "x": 1607436000000,
    "y": 1625128.56211579,
    "y0": 7533.02707532227,
  },
  Object {
    "x": 1607436900000,
    "y": 1660982.24115757,
    "y0": 5732.00699123528,
  },
  Object {
    "x": 1607437650000,
    "y": 1660982.24115757,
    "y0": 5732.00699123528,
  },
]
`;
